// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`has a bottom word 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#DCDCDC",
      "flexGrow": 0,
      "margin": "0px 10px 10px 0px",
      "minWidth": "115px",
      "padding": "7px",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "height": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "border": "3px dashed #ffffff",
          "boxSizing": "border-box",
          "flexGrow": 1,
          "marginBottom": "7px",
          "minHeight": "45px",
          "transition": "0.1s",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
            "left": 0,
            "opacity": 1,
            "position": "relative",
            "top": 0,
            "transition": "0.1s",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "border": "3px dashed transparent",
          "boxSizing": "border-box",
          "direction": "ltr",
          "flexGrow": 1,
          "minHeight": "45px",
          "transition": "0.1s",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
            "left": 0,
            "opacity": 1,
            "position": "relative",
            "top": 0,
            "transition": "0.1s",
          }
        }
      >
        <div
          aria-describedby={null}
          className=""
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "flex": 1,
            }
          }
          title={null}
        >
          <div
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderLeft": "5px solid #44C6FF",
                "boxShadow": "0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset",
                "cursor": "pointer",
                "display": "flex",
                "flexDirection": "row",
                "padding": "9px",
              }
            }
          >
            <span
              style={
                Object {
                  "display": "flex",
                  "flex": 1,
                  "overflow": "hidden",
                }
              }
            >
              <span
                className={undefined}
                onClick={[Function]}
                style={
                  Object {
                    "flexGrow": 2,
                    "overflow": "hidden",
                    "textOverflow": "ellipsis",
                    "width": "max-content",
                  }
                }
              >
                bottomWord
              </span>
            </span>
            <sup
              style={
                Object {
                  "opacity": "0.8",
                  "padding": "2px 0px 0px",
                  "top": "0px",
                }
              }
            >
              1
            </sup>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`has a top and bottom word 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#DCDCDC",
      "flexGrow": 0,
      "margin": "0px 10px 10px 0px",
      "minWidth": "115px",
      "padding": "7px",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "height": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "border": "3px dashed transparent",
          "boxSizing": "border-box",
          "flexGrow": 1,
          "marginBottom": "7px",
          "minHeight": "45px",
          "transition": "0.1s",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
            "left": 0,
            "opacity": 1,
            "position": "relative",
            "top": 0,
            "transition": "0.1s",
          }
        }
      >
        <div
          aria-describedby={null}
          className=""
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "flex": 1,
            }
          }
          title={null}
        >
          <div
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderLeft": "5px solid #44C6FF",
                "boxShadow": "0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset",
                "cursor": "pointer",
                "display": "flex",
                "flexDirection": "row",
                "padding": "9px",
              }
            }
          >
            <span
              style={
                Object {
                  "display": "flex",
                  "flex": 1,
                  "overflow": "hidden",
                }
              }
            >
              <span
                className={undefined}
                onClick={[Function]}
                style={
                  Object {
                    "flexGrow": 2,
                    "overflow": "hidden",
                    "textOverflow": "ellipsis",
                    "width": "max-content",
                  }
                }
              >
                topWord
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "border": "3px dashed transparent",
          "boxSizing": "border-box",
          "direction": "ltr",
          "flexGrow": 1,
          "minHeight": "45px",
          "transition": "0.1s",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
            "left": 0,
            "opacity": 1,
            "position": "relative",
            "top": 0,
            "transition": "0.1s",
          }
        }
      >
        <div
          aria-describedby={null}
          className=""
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "flex": 1,
            }
          }
          title={null}
        >
          <div
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderLeft": "5px solid #44C6FF",
                "boxShadow": "0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset",
                "cursor": "pointer",
                "display": "flex",
                "flexDirection": "row",
                "padding": "9px",
              }
            }
          >
            <span
              style={
                Object {
                  "display": "flex",
                  "flex": 1,
                  "overflow": "hidden",
                }
              }
            >
              <span
                className={undefined}
                onClick={[Function]}
                style={
                  Object {
                    "flexGrow": 2,
                    "overflow": "hidden",
                    "textOverflow": "ellipsis",
                    "width": "max-content",
                  }
                }
              >
                bottomWord
              </span>
            </span>
            <sup
              style={
                Object {
                  "opacity": "0.8",
                  "padding": "2px 0px 0px",
                  "top": "0px",
                }
              }
            >
              1
            </sup>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`has a top word 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#DCDCDC",
      "flexGrow": 0,
      "margin": "0px 10px 10px 0px",
      "minWidth": "115px",
      "padding": "7px",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "height": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "border": "3px dashed transparent",
          "boxSizing": "border-box",
          "flexGrow": 1,
          "marginBottom": "7px",
          "minHeight": "45px",
          "transition": "0.1s",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
            "left": 0,
            "opacity": 1,
            "position": "relative",
            "top": 0,
            "transition": "0.1s",
          }
        }
      >
        <div
          aria-describedby={null}
          className=""
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "flex": 1,
            }
          }
          title={null}
        >
          <div
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderLeft": "5px solid #44C6FF",
                "boxShadow": "0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset",
                "cursor": "pointer",
                "display": "flex",
                "flexDirection": "row",
                "padding": "9px",
              }
            }
          >
            <span
              style={
                Object {
                  "display": "flex",
                  "flex": 1,
                  "overflow": "hidden",
                }
              }
            >
              <span
                className={undefined}
                onClick={[Function]}
                style={
                  Object {
                    "flexGrow": 2,
                    "overflow": "hidden",
                    "textOverflow": "ellipsis",
                    "width": "max-content",
                  }
                }
              >
                topWord
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "border": "3px dashed #ffffff",
          "boxSizing": "border-box",
          "direction": "ltr",
          "flexGrow": 1,
          "minHeight": "45px",
          "transition": "0.1s",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
            "left": 0,
            "opacity": 1,
            "position": "relative",
            "top": 0,
            "transition": "0.1s",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`has multiple bottom words 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#DCDCDC",
      "flexGrow": 1,
      "margin": "0px 10px 10px 0px",
      "minWidth": "115px",
      "padding": "7px",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "height": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "border": "3px dashed #ffffff",
          "boxSizing": "border-box",
          "flexGrow": 1,
          "marginBottom": "7px",
          "minHeight": "45px",
          "transition": "0.1s",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
            "left": 0,
            "opacity": 1,
            "position": "relative",
            "top": 0,
            "transition": "0.1s",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "border": "3px dashed transparent",
          "boxSizing": "border-box",
          "direction": "ltr",
          "flexGrow": 1,
          "minHeight": "45px",
          "transition": "0.1s",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
            "left": 0,
            "opacity": 1,
            "position": "relative",
            "top": 0,
            "transition": "0.1s",
          }
        }
      >
        <div
          aria-describedby={null}
          className=""
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "flex": 1,
            }
          }
          title={null}
        >
          <div
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderLeft": "5px solid #44C6FF",
                "boxShadow": "0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset",
                "cursor": "pointer",
                "display": "flex",
                "flexDirection": "row",
                "padding": "9px",
              }
            }
          >
            <span
              style={
                Object {
                  "display": "flex",
                  "flex": 1,
                  "overflow": "hidden",
                }
              }
            >
              <span
                className={undefined}
                onClick={[Function]}
                style={
                  Object {
                    "flexGrow": 2,
                    "overflow": "hidden",
                    "textOverflow": "ellipsis",
                    "width": "max-content",
                  }
                }
              >
                bottomWord1
              </span>
            </span>
          </div>
        </div>
        <div
          aria-describedby={null}
          className=""
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "flex": 1,
            }
          }
          title={null}
        >
          <div
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderLeft": "5px solid #44C6FF",
                "boxShadow": "0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset",
                "cursor": "pointer",
                "display": "flex",
                "flexDirection": "row",
                "padding": "9px",
              }
            }
          >
            <span
              style={
                Object {
                  "display": "flex",
                  "flex": 1,
                  "overflow": "hidden",
                }
              }
            >
              <span
                className={undefined}
                onClick={[Function]}
                style={
                  Object {
                    "flexGrow": 2,
                    "overflow": "hidden",
                    "textOverflow": "ellipsis",
                    "width": "max-content",
                  }
                }
              >
                bottomWord2
              </span>
            </span>
            <sup
              style={
                Object {
                  "opacity": "0.8",
                  "padding": "2px 0px 0px",
                  "top": "0px",
                }
              }
            >
              1
            </sup>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`has multiple top and bottom words 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#DCDCDC",
      "flexGrow": 1,
      "margin": "0px 10px 10px 0px",
      "minWidth": "115px",
      "padding": "7px",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "height": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "border": "3px dashed transparent",
          "boxSizing": "border-box",
          "flexGrow": 1,
          "marginBottom": "7px",
          "minHeight": "45px",
          "transition": "0.1s",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
            "left": 0,
            "opacity": 1,
            "position": "relative",
            "top": 0,
            "transition": "0.1s",
          }
        }
      >
        <div
          aria-describedby={null}
          className=""
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "flex": 1,
            }
          }
          title={null}
        >
          <div
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderLeft": "5px solid #44C6FF",
                "boxShadow": "0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset",
                "cursor": "pointer",
                "display": "flex",
                "flexDirection": "row",
                "padding": "9px",
              }
            }
          >
            <span
              style={
                Object {
                  "display": "flex",
                  "flex": 1,
                  "overflow": "hidden",
                }
              }
            >
              <span
                className={undefined}
                onClick={[Function]}
                style={
                  Object {
                    "flexGrow": 2,
                    "overflow": "hidden",
                    "textOverflow": "ellipsis",
                    "width": "max-content",
                  }
                }
              >
                topWord1
              </span>
            </span>
          </div>
        </div>
        <div
          aria-describedby={null}
          className=""
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "flex": 1,
            }
          }
          title={null}
        >
          <div
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderLeft": "5px solid #44C6FF",
                "boxShadow": "0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset",
                "cursor": "pointer",
                "display": "flex",
                "flexDirection": "row",
                "padding": "9px",
              }
            }
          >
            <span
              style={
                Object {
                  "display": "flex",
                  "flex": 1,
                  "overflow": "hidden",
                }
              }
            >
              <span
                className={undefined}
                onClick={[Function]}
                style={
                  Object {
                    "flexGrow": 2,
                    "overflow": "hidden",
                    "textOverflow": "ellipsis",
                    "width": "max-content",
                  }
                }
              >
                topWord2
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "border": "3px dashed transparent",
          "boxSizing": "border-box",
          "direction": "ltr",
          "flexGrow": 1,
          "minHeight": "45px",
          "transition": "0.1s",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
            "left": 0,
            "opacity": 1,
            "position": "relative",
            "top": 0,
            "transition": "0.1s",
          }
        }
      >
        <div
          aria-describedby={null}
          className=""
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "flex": 1,
            }
          }
          title={null}
        >
          <div
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderLeft": "5px solid #44C6FF",
                "boxShadow": "0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset",
                "cursor": "pointer",
                "display": "flex",
                "flexDirection": "row",
                "padding": "9px",
              }
            }
          >
            <span
              style={
                Object {
                  "display": "flex",
                  "flex": 1,
                  "overflow": "hidden",
                }
              }
            >
              <span
                className={undefined}
                onClick={[Function]}
                style={
                  Object {
                    "flexGrow": 2,
                    "overflow": "hidden",
                    "textOverflow": "ellipsis",
                    "width": "max-content",
                  }
                }
              >
                bottomWord1
              </span>
            </span>
          </div>
        </div>
        <div
          aria-describedby={null}
          className=""
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "flex": 1,
            }
          }
          title={null}
        >
          <div
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderLeft": "5px solid #44C6FF",
                "boxShadow": "0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset",
                "cursor": "pointer",
                "display": "flex",
                "flexDirection": "row",
                "padding": "9px",
              }
            }
          >
            <span
              style={
                Object {
                  "display": "flex",
                  "flex": 1,
                  "overflow": "hidden",
                }
              }
            >
              <span
                className={undefined}
                onClick={[Function]}
                style={
                  Object {
                    "flexGrow": 2,
                    "overflow": "hidden",
                    "textOverflow": "ellipsis",
                    "width": "max-content",
                  }
                }
              >
                bottomWord2
              </span>
            </span>
            <sup
              style={
                Object {
                  "opacity": "0.8",
                  "padding": "2px 0px 0px",
                  "top": "0px",
                }
              }
            >
              1
            </sup>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`has multiple top words 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#DCDCDC",
      "flexGrow": 1,
      "margin": "0px 10px 10px 0px",
      "minWidth": "115px",
      "padding": "7px",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "height": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "border": "3px dashed transparent",
          "boxSizing": "border-box",
          "flexGrow": 1,
          "marginBottom": "7px",
          "minHeight": "45px",
          "transition": "0.1s",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
            "left": 0,
            "opacity": 1,
            "position": "relative",
            "top": 0,
            "transition": "0.1s",
          }
        }
      >
        <div
          aria-describedby={null}
          className=""
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "flex": 1,
            }
          }
          title={null}
        >
          <div
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderLeft": "5px solid #44C6FF",
                "boxShadow": "0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset",
                "cursor": "pointer",
                "display": "flex",
                "flexDirection": "row",
                "padding": "9px",
              }
            }
          >
            <span
              style={
                Object {
                  "display": "flex",
                  "flex": 1,
                  "overflow": "hidden",
                }
              }
            >
              <span
                className={undefined}
                onClick={[Function]}
                style={
                  Object {
                    "flexGrow": 2,
                    "overflow": "hidden",
                    "textOverflow": "ellipsis",
                    "width": "max-content",
                  }
                }
              >
                topWord1
              </span>
            </span>
          </div>
        </div>
        <div
          aria-describedby={null}
          className=""
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "flex": 1,
            }
          }
          title={null}
        >
          <div
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderLeft": "5px solid #44C6FF",
                "boxShadow": "0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset",
                "cursor": "pointer",
                "display": "flex",
                "flexDirection": "row",
                "padding": "9px",
              }
            }
          >
            <span
              style={
                Object {
                  "display": "flex",
                  "flex": 1,
                  "overflow": "hidden",
                }
              }
            >
              <span
                className={undefined}
                onClick={[Function]}
                style={
                  Object {
                    "flexGrow": 2,
                    "overflow": "hidden",
                    "textOverflow": "ellipsis",
                    "width": "max-content",
                  }
                }
              >
                topWord2
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "border": "3px dashed #ffffff",
          "boxSizing": "border-box",
          "direction": "ltr",
          "flexGrow": 1,
          "minHeight": "45px",
          "transition": "0.1s",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
            "left": 0,
            "opacity": 1,
            "position": "relative",
            "top": 0,
            "transition": "0.1s",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`is empty 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#DCDCDC",
      "flexGrow": 0,
      "margin": "0px 10px 10px 0px",
      "minWidth": "calc(115px/2)",
      "padding": "7px",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "height": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "border": "3px dashed #ffffff",
          "boxSizing": "border-box",
          "flexGrow": 1,
          "marginBottom": "7px",
          "minHeight": "45px",
          "transition": "0.1s",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
            "left": 0,
            "opacity": 1,
            "position": "relative",
            "top": 0,
            "transition": "0.1s",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "border": "3px dashed #ffffff",
          "boxSizing": "border-box",
          "direction": "ltr",
          "flexGrow": 1,
          "minHeight": "45px",
          "transition": "0.1s",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
            "left": 0,
            "opacity": 1,
            "position": "relative",
            "top": 0,
            "transition": "0.1s",
          }
        }
      />
    </div>
  </div>
</div>
`;
